Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • mutter mutter
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,106
    • Issues 1,106
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 122
    • Merge requests 122
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • muttermutter
  • Issues
  • #1928
Closed
Open
Issue created Aug 30, 2021 by Quentin Gliech@sandhose

Crash when going out of sleep

Affected version

  • NixOS unstable
  • Mutter 40.4
  • Linux 5.13.12
  • In a Wayland session on an AMD GPU

Bug summary

Mutter crashes on meta_kms_impl_device_get_fd after going out of sleep.

Steps to reproduce

  1. Wait for the computer to go to sleep
  2. Wake it up from sleep

What happened

I can't manage to reproduce it reliably, but sometime (quite frequently) when I go back to my desktop and it goes out of sleep I'm greeted with the GDM login screen because Mutter crashed with a segfault. I don't think I experienced it with mutter 40.1.

What did you expect to happen

Not crash?

Relevant logs, screenshots, screencasts etc.

Stacktrace:

Core was generated by `/nix/store/lr4iqffvxhyark87yq5lblj1235l8lnw-gnome-shell-40.4/bin/gnome-shell'.
Program terminated with signal SIGSEGV, Segmentation fault.

#0  0x00007fa24da8e74b in meta_kms_impl_device_get_fd () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/libmutter-8.so.0
#1  0x00007fa24da8f388 in meta_kms_mode_ensure_blob_id () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/libmutter-8.so.0
#2  0x00007fa24da8a6c6 in meta_kms_impl_device_atomic_process_update () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/libmutter-8.so.0
#3  0x00007fa24da91ba5 in meta_kms_post_pending_update_sync () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/libmutter-8.so.0
#4  0x00007fa24da997ad in meta_renderer_native_post_mode_set_updates () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/libmutter-8.so.0
#5  0x00007fa24da93c64 in meta_onscreen_native_swap_buffers_with_damage () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/libmutter-8.so.0
#6  0x00007fa24d41254d in cogl_onscreen_swap_buffers_with_damage () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/mutter-8/libmutter-cogl-8.so.0
#7  0x00007fa24dc46de6 in swap_framebuffer () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/mutter-8/libmutter-clutter-8.so.0
#8  0x00007fa24dc47543 in clutter_stage_cogl_redraw_view () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/mutter-8/libmutter-clutter-8.so.0
#9  0x00007fa24daa0517 in meta_stage_native_redraw_view () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/libmutter-8.so.0
#10 0x00007fa24dc2c209 in handle_frame_clock_frame () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/mutter-8/libmutter-clutter-8.so.0
#11 0x00007fa24dbfba22 in frame_clock_source_dispatch () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/mutter-8/libmutter-clutter-8.so.0
#12 0x00007fa24e63558b in g_main_dispatch (context=0x17c46a0) at ../glib/gmain.c:3337
#13 g_main_context_dispatch (context=0x17c46a0) at ../glib/gmain.c:4055
#14 0x00007fa24e635838 in g_main_context_iterate (context=0x17c46a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4131
#15 0x00007fa24e635b2b in g_main_loop_run (loop=0x1b6e700) at ../glib/gmain.c:4329
#16 0x00007fa24d9f816e in meta_run () from /nix/store/ha9wagc7vqf6iscwgh39iynd1j9rrl8q-mutter-40.4/lib/libmutter-8.so.0
#17 0x0000000000403839 in main ()

I can't find anything relevant in the kernel logs nor journalctl around that time, other than org.gnome.Shell@wayland.service: Main process exited, code=dumped, status=11/SEGV

Edited Aug 30, 2021 by Quentin Gliech
Assignee
Assign to
Time tracking